- 
    Bug 
- 
    Resolution: Done
- 
    P0: Blocker 
- 
    5.15.0 Alpha
- 
    None
- 
        
- 
        6f424f21b76b983188bb23715612f22437c098b5 (qt/qtdeclarative/5.15)
Continuous Integration: Failed
The test execution failed ('/home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests'). The CI rejected the staged commits due to the beforementioned reason. Possible reason could be a bug in one of the commits or some more recent change. Please investigate it.
The error was in "qt/qtwebengine", revision: a6fb2c592bac997baf87016e9dd6b7a3c061ef3c
 agent:2020/02/03 05:33:59 build.go:751: 
 agent:2020/02/03 05:33:59 build.go:484: Executing instruction 47 of 108 - RunQtUnitTest
 agent:2020/02/03 05:33:59 build.go:600: Running tests in directory /home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests
 agent:2020/02/03 05:33:59 runner.go:72: Generating test results with TESTARGS=-o /home/qt/work/testresults/tests/auto/quick/qmltests040596537,xml -o -,txt
 agent:2020/02/03 05:33:59 build.go:329: [make check -j1] 900 900
 agent:2020/02/03 05:33:59 build.go:220: /home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/target_wrapper.sh  ./tst_qmltests -o /home/qt/work/testresults/tests/auto/quick/qmltests040596537,xml -o -,txt
 agent:2020/02/03 05:33:59 build.go:220: QtWebEngine::initialize() called with QCoreApplication object already created and should be call before. This is depreciated and may fail in the future.
 agent:2020/02/03 05:33:59 build.go:220: Attribute Qt::AA_ShareOpenGLContexts must be set before QCoreApplication is created.
 agent:2020/02/03 05:34:00 build.go:220: [5506:5528:0203/053400.059681:WARNING:important_file_writer.cc(97)] temp file failure: /home/qt/.local/share/tst_qmltests/QtWebEngine/Default/user_prefs.json : could not create temporary file: No such file or directory (2)
 agent:2020/02/03 05:34:00 build.go:220: ********* Start testing of qmltests *********
 agent:2020/02/03 05:34:00 build.go:220: Config: Using QtTest library 5.15.0, Qt 5.15.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 9.1.0)
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::WebEngineAction::initTestCase()
 agent:2020/02/03 05:34:00 build.go:220: [5506:5506:0203/053400.340062:ERROR:viz_process_transport_factory.cc(331)] Switching to software compositing.
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 0)
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 1)
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 2)
 agent:2020/02/03 05:34:00 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 3)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 4)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 5)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 6)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 7)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 8)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 9)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 10)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 11)
 agent:2020/02/03 05:34:01 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 12)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 13)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 14)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 15)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 16)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 17)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 18)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 19)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 20)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 21)
 agent:2020/02/03 05:34:02 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 22)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 23)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 24)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 25)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 26)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 27)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 28)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 29)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 30)
 agent:2020/02/03 05:34:03 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 31)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 32)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 33)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 34)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 35)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 36)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 37)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 38)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 39)
 agent:2020/02/03 05:34:04 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 40)
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 41)
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 42)
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::WebEngineAction::test_actions(row 43)
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::UnknownTestFunc()
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:05 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::UnknownTestFunc()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::WebEngineAction::test_trigger()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::WebEngineAction::cleanupTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::ActiveFocusOnPress::initTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::ActiveFocusOnPress::test_activeFocusOnPress()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::ActiveFocusOnPress::cleanupTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:06 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::initTestCase()
 agent:2020/02/03 05:34:07 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::test_contextMenu(defaultContextMenu)
 agent:2020/02/03 05:34:08 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::test_contextMenu(defaultContextMenuWithConnect)
 agent:2020/02/03 05:34:08 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::test_contextMenu(dontShowDefaultContextMenu)
 agent:2020/02/03 05:34:08 build.go:220: QWARN  : qmltests::WebEngineViewContextMenu::test_contextMenuLinkAndSelectedText() QSGThreadedRenderLoop: expose event received for window QQuickMenuPopupWindow1(0x1c4a710 active exposed, visibility=QWindow::Windowed, flags=QFlags<Qt::WindowType>(Popup), transientParent=0x7fffcca253d0, geometry=132,98 0x0) with invalid geometry: QRect(132,98 0x0) on QScreen(0x1196630, name=default)
 agent:2020/02/03 05:34:08 build.go:220: QWARN  : qmltests::WebEngineViewContextMenu::test_contextMenuLinkAndSelectedText() QSGThreadedRenderLoop: expose event received for window QQuickMenuPopupWindow1(0x174b410 active exposed, visibility=QWindow::Windowed, flags=QFlags<Qt::WindowType>(Popup), transientParent=0x7fffcca253d0, geometry=132,98 0x0) with invalid geometry: QRect(132,98 0x0) on QScreen(0x1196630, name=default)
 agent:2020/02/03 05:34:09 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::test_contextMenuLinkAndSelectedText()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::test_contextMenuMediaType()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::WebEngineViewContextMenu::cleanupTestCase()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::DesktopWebEngineViewLoadHtml::initTestCase()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::DesktopWebEngineViewLoadHtml::test_baseUrlAfterLoadHtml()
 agent:2020/02/03 05:34:10 build.go:220: PASS   : qmltests::DesktopWebEngineViewLoadHtml::cleanupTestCase()
 agent:2020/02/03 05:34:10 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) 
agent:2020/02/03 05:34:10 build.go:220: PASS : qmltests::WebEngineViewDownload::initTestCase()
agent:2020/02/03 05:34:11 build.go:220: QWARN : qmltests::WebEngineViewDownload::test_downloadCancelled() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
 agent:2020/02/03 05:34:11 build.go:220: PASS   : qmltests::WebEngineViewDownload::test_downloadCancelled()
 agent:2020/02/03 05:34:11 build.go:220: PASS   : qmltests::WebEngineViewDownload::test_downloadLocation()
 agent:2020/02/03 05:34:11 build.go:220: QWARN  : qmltests::WebEngineViewDownload::test_downloadRequest() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) 
agent:2020/02/03 05:34:11 build.go:220: PASS : qmltests::WebEngineViewDownload::test_downloadRequest()
agent:2020/02/03 05:34:11 build.go:220: QWARN : qmltests::WebEngineViewDownload::test_downloadSucceeded() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
 agent:2020/02/03 05:34:11 build.go:220: PASS   : qmltests::WebEngineViewDownload::test_downloadSucceeded()
 agent:2020/02/03 05:34:11 build.go:220: QWARN  : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithFileName(setDirectoryFirst) file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) 
agent:2020/02/03 05:34:11 build.go:220: PASS : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithFileName(setDirectoryFirst)
agent:2020/02/03 05:34:11 build.go:220: QWARN : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithFileName(setFileNameFirst) file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
 agent:2020/02/03 05:34:11 build.go:220: PASS   : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithFileName(setFileNameFirst)
 agent:2020/02/03 05:34:11 build.go:220: QWARN  : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithSuggestedFileName() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) 
agent:2020/02/03 05:34:11 build.go:220: QWARN : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithSuggestedFileName() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
agent:2020/02/03 05:34:11 build.go:220: QWARN : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithSuggestedFileName() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>)
{ ... }agent:2020/02/03 05:34:12 build.go:220: PASS : qmltests::WebEngineViewDownload::test_downloadToDirectoryWithSuggestedFileName()
agent:2020/02/03 05:34:12 build.go:220: QWARN : qmltests::WebEngineViewDownload::test_downloadWithSetPath() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
 agent:2020/02/03 05:34:12 build.go:220: PASS   : qmltests::WebEngineViewDownload::test_downloadWithSetPath()
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::WebEngineViewDownload::test_totalFileLength() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_download.qml:80:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) 
 agent:2020/02/03 05:34:12 build.go:220: PASS   : qmltests::WebEngineViewDownload::test_totalFileLength()
 agent:2020/02/03 05:34:12 build.go:220: PASS   : qmltests::WebEngineViewDownload::cleanupTestCase()
 agent:2020/02/03 05:34:12 build.go:220: PASS   : qmltests::initTestCase()
 agent:2020/02/03 05:34:12 build.go:220: PASS   : qmltests::cleanupTestCase()
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/SignalSpy.qml:258: Error: Invalid write to global property "qtest_count"
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() 
 agent:2020/02/03 05:34:12 build.go:220: WARNING: This project is using the testsupport QML API extensions for QtWebEngine and is therefore tied to a specific QtWebEngine release.
 agent:2020/02/03 05:34:12 build.go:220: WARNING: The testsupport API will change from version to version, or even be removed. You have been warned!
 agent:2020/02/03 05:34:12 build.go:220: 
 agent:2020/02/03 05:34:12 build.go:220: QWARN  : qmltests::UnknownTestFunc() file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_favicon.qml:40:18: Cannot assign to property of unknown type "". 
 agent:2020/02/03 05:34:12 build.go:220:          testSupport: WebEngineTestSupport { 
 agent:2020/02/03 05:34:12 build.go:220:                       ^
 agent:2020/02/03 05:34:12 build.go:220: Makefile:410: recipe for target 'check' failed
 agent:2020/02/03 05:34:12 build.go:220: make: *** [check] Error 1
 agent:2020/02/03 05:34:12 build.go:253: Process finished with error: exit status 2
 agent:2020/02/03 05:34:12 build.go:223: Error reading from stdout/err: exit status 2
 agent:2020/02/03 05:34:12 build.go:471: Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some
 agent:2020/02/03 05:34:12 build.go:384: Skip uploading core files because CORE_FILES_PATH is not set in the environment
 agent:2020/02/03 05:34:12 build.go:473: 
 agent:2020/02/03 05:34:12 build.go:471: Executing scheduled instruction 2 of 2 - Upload test results
 agent:2020/02/03 05:34:12 storageclient.go:451: Collecting test results, archiving and uploading them
 agent:2020/02/03 05:34:12 result.go:177: Collecting 7 test results ...
 agent:2020/02/03 05:34:12 build.go:473: 
 agent:2020/02/03 05:34:12 agent.go:272: Test failed
 agent:2020/02/03 05:34:12 agent.go:200: ERROR building: error unmarshalling testlib xml output ('/home/qt/work/testresults/tests/auto/quick/qmltests040596537'): 'XML syntax error on line 398: unexpected EOF'.
 Most likely the test has crashed
 INFO:workitem.py:612(16989): Agent FINISHED FAIL: testing /home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests: qt/qtwebengine/ee41adcddb4868053830840826fa62abb6411330/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-ca0cfe/a6a637bdc7a15b648d8117064e9c5a7c13c5479d/Test
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1580707136
Tested changes (refs/builds/qtci/5.15/1580707136):
  https://codereview.qt-project.org/c/qt/qt5/+/288302 Update submodules on '5.15' in qt/qt5
- is duplicated by
- 
                    QTBUG-82635 Q12020 Crashing autotest: Webengine - qmltests -         
- Closed
 
-