Required properties: Do not fully resolve property caches

There's no need to have the property cache fully resolved when checking
for required properties, and it introduces bugs as information for fully
resolving the type is missing at that point.
This would later cause errors in the QQmlPropertyValidator, due to the
propType being wrong.

Fixes: QTBUG-81806
Change-Id: I413cc3fab57f258f5e4cf4164c505312b10543e2
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>